2005-07-13  Alex Roitman  <shura@gramps-project.org>
	* src/GenericFilter.py: Proper test for place in event-based filters.

2005-07-13  Don Allingham  <don@gramps-project.org>
	* src/GrampsInMemDB.py: add get_event_cursor
	* src/GrampsDbBase.py: add get_event_cursor

2005-07-12  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: handle links properly
	* src/plugins/Makefile.am: export Rebuild.py

2005-07-11  Don Allingham  <don@gramps-project.org>
	* src/GrampsBSDDB.py: add repair_secondary task to rebuild 
	secondary indices
	* src/GrampsDbBase.py: add repair_secondary task
	* src/plugins/Check.py: move to "Repair Database" category
	* src/plugins/Rebuild.py: new plugin to repair secondary indices

2005-07-11  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/GraphViz.py (GraphViz.__init__): Define nominal and
	reduced margins; (write_report): Use nominal margin to compute
	virtual size and reduced margin to write the margin size;
	(write_header): Write reduced margin into header.

2005-07-10  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: enhancements, almost usable
	* src/Report.py: fixed spacing

2005-07-09  Alex Roitman  <shura@gramps-project.org>
	* src/ReadXML.py (stop_ref): Properly read id-based witness
	reference created by old gramps.

2005-07-09  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/docgen/OpenOfficeDoc.py: Make the output conform to the DTDs
	for OpenOffice.org XML

2005-07-08  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/GraphViz.py: Use single margin value, properly use
	cm for margin, properly use 2 digits after converting to inches.
	* src/ChooseParents.py (__init__): Handle events with empty dates.

2005-07-07  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/docgen/OpenOfficeDoc.py: Compute correctly the draw:viewBox to
	please some versions of OpenOffice.org

2005-07-05  Martin Hawlisch  <Martin.Hawlisch@gmx.de>