@@ -67,14 +67,14 @@ class Sort:
         name1 = first.get_primary_name()
         name2 = second.get_primary_name()
 
-        fsn = name1.get_surname().upper()
-        ssn = name2.get_surname().upper()
+        fsn = name1.get_surname()
+        ssn = name2.get_surname()
 
         if fsn == ssn :
-            ffn = name1.get_first_name().upper()
-            sfn = name2.get_first_name().upper()
+            ffn = name1.get_first_name()
+            sfn = name2.get_first_name()
             if ffn == sfn:
-                return locale.strcoll(name1.get_suffix().upper(), name2.get_suffix().upper())
+                return locale.strcoll(name1.get_suffix(), name2.get_suffix())
             else:
                 return locale.strcoll(ffn, sfn)
         else:
